Fixed longer quant layout issue

--- a/inst/extdata/css/nejm.css
+++ b/inst/extdata/css/nejm.css
@@ -52,17 +52,25 @@ body .figbody {
   align-items: center;
   justify-content: center;
 }
+
+.quantile .q0 {
+  order: 2;
+}
+
 .quantile .q50 {
   order: 1;
   padding-right: 0.5em;
+  font-weight: bold;
 }
-.quantile .q25:before {content: "(";}
-.quantile .q25 {
-  order: 2
-}
+.quantile .q0 {order: 2; margin-right: 0.5em;}
+.quantile .q25:before {content: " (";}
+.quantile .q25 {order: 3}
 .quantile .q75:before {content: ", ";}
-.quantile .q75 {order: 3}
-.quantile .q75:after {content: ")";}
+.quantile .q75 {order: 4}
+.quantile .q75:after {content: ") ";}
+.quantile .q100 {order: 5; margin-left: 0.5em;}
+.quantile .msd {order: 6; margin-left: 0.5em;}
+
 tbody .variable {
 	float:      left;
 	text-align: left;
